# AR

./: .gitignore  AGENTS.md  AGENTS_1.md  AGENTS_2.md  README.md  Stage_3.md  TODO.md  pyproject.toml
docs/: c_axis_direction_task_o.md  current_output_index_task_k.md  direction_capability_task_l.md  directional_capability_contract_task_q.md  directional_modes_task_m.md  directional_spread_task_p.md  fit_layer_parameterization_task_h.md  forward_interface_task_i.md  greenfield_repo_design.md  inplane_generic_direction_validation_task_n.md  luo_source_map_round1.md  new_surrogate_inverse_repository_plan.md  order_parameter_refactor_round2.md  pairing_state_stage3.md  projection_consistency_round1.md  rmft_source_vs_round2_ar_validation.md  round2_residual_anatomy.md  surrogate_round1_design.md  workspace_cleanup_task_f.md  workspace_cleanup_task_k.md
docs/new_surrogate_inverse_repository/: AGENTS.md  TODO.md
outputs/dataset/: pairing_transport_dataset_smoke_manifest.json
outputs/inverse/: inverse_report.json
outputs/source/: ar_aware_projection_comparison_summary.json  ar_aware_projection_examples.csv  luo_source_inspection_summary.json  projection_consistency_examples.csv  projection_consistency_summary.json  round1_vs_round2_projection_comparison.json  round2_baseline_selection.json  round2_projection_examples.csv  round2_projection_summary.json  round2_residual_anatomy_summary.json  round2_residual_examples.csv
scripts/core/: analyze_round2_baseline_spectra.py  audit_c_axis_direction.py  audit_direction_capability.py  generate_forward_spectrum.py  (+6 more)
(+111 files in other folders)
