[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lno327-ar-forward-truth"
version = "0.1.0"
description = "Forward-physics truth chain for LNO327 / La3Ni2O7 Andreev-reflection spectra."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "autograd>=1.7",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.2",
  "pydantic>=2.8",
  "scipy>=1.12",
  "torch>=2.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"
